# ambianic-edge

./: .coverage  .dockerignore  .env  .gitignore  .gitpod.Dockerfile  .gitpod.env.sh  .gitpod.yml  .isort.cfg  .lgtm.yml  .pre-commit-config.yaml  .releaserc  .travis.yml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dev.Dockerfile  Dockerfile  Dockerfile.dev  README.md  SECURITY.md  ambianic-attach.sh  ambianic-build.sh  ambianic-deamon-start.sh  ambianic-debug.sh  ambianic-docs.sh  ambianic-start.sh  ambianic-test.sh  ambianic_start.sh  config.defaults.yaml  config.local.yaml  config.yaml  coverage.xml  docker-compose.yml  index.html  install_requirements.sh  main.py  package.json  peerjs-config.yaml  requirements.txt  (+6 more)
src/: .gitignore  run-dev.sh  setup.cfg  setup.py
src/Ambianic.egg-info/: PKG-INFO  SOURCES.txt
src/ambianic/: __init__.py  __main__.py  config_manager.py  config_mgm.py  config_util.py  configuration.py  device.py  logger.py  notification.py  server.py  service.py  util.py
src/ambianic.egg-info/: SOURCES.txt  top_level.txt
src/ambianic/config_mgm/: __init__.py  config_diff.py  configuration_manager.py  fileutils.py
src/ambianic/pipeline/: __init__.py  interpreter.py  save_event.py  store.py  timeline.py  timeline_event.py
src/ambianic/pipeline/ai/: face_detect.py  fall_detect.py  fall_detect_resnet50.py  image_boundingBox_detection.py  image_detection.py  inference.py  object_detect.py  pose_engine.py  tf_detect.py  (+4 more)
src/ambianic/webapp/: .gitignore  fastapi-app.py  fastapi-server.py  fastapi_app.py  fastapi_server.py  flaskr.py
(+312 files in other folders)
