[metadata]
name = ambianic-edge
version = 1.18.1
author = Ivelin Ivanov
author_email = ivelin.ivanov@ambianic.ai
description = Edge component of the AI platform for home and business automation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://ambianic.ai
license = Apache Software License 2.0
classifiers = 
	Development Status :: Beta
	Programming Language :: Python :: 3
	OSI Approved :: Apache Software License
	Operating System :: OS Independent
	TOPIC :: HOME AUTOMATION
	TOPIC :: SCIENTIFIC/ENGINEERING :: ARTIFICIAL INTELLIGENCE
	TOPIC :: SOFTWARE DEVELOPMENT :: EMBEDDED SYSTEMS
	Intended Audience :: Developers

[options]
packages = find:
python_requires = >=3.7

